# palo-sidekick

./: .pre-commit-config.yaml  LICENSE  README.md  requirements-dev.txt  setup.cfg  tox.ini
.github/: python-workflow.yml
.github/workflows/: python-workflow.yml
palo_sidekick/: helpers.py  main.py  panorama.py
tests/: cli_test.py  conftest.py  helpers_test.py  panorama_test.py
tests/data/: show_devicegroups.xml  show_devicegroups_none.xml  show_devices_all.xml  show_devices_all_nodevices.xml
