[metadata]
name = palo-sidekick
version = 0.1.0
author = John Torres
author_email = johnnyjamestorres@outlook.com
description = A collection of commands to interact with Palo Alto devices.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnjtorres/palo-sidekick
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    pan-os-python
    click
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[mypy-tests.*]
disallow_untyped_defs = false
